--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -60,7 +60,243 @@ html, body {
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
-    margin-bottom: 15px;
+    margin-bottom: 1.5vh;
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+
+.fixed-header {
+	position: fixed;
+	width: 100%;
+	background-color:rgb(255, 255, 255, 0.9);
+	z-index: 100;
+	height: 10vh;
+	display: block;
+}
+
+.main-header {
+	display: flex;
+	height: 100%;
+	width: 60%;
+	margin: 0 auto;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.main-nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 50%;
+}
+
+.main-nav a{
+	color: #AFAFAF;
+	text-decoration: none;
+	font-family: 'Work Sans', sans-serif;
+	-webkit-transition: color 0.5s ease;
+}
+
+.main-nav a:hover {
+	color: #000;
+}
+
+.container {
+	width: 60%;
+	margin: 0 auto;
+	padding: 10vh 0 0;
+	display: flex;
+	flex-direction: column;
+}
+
+.container-header {
+	width: 100%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.logo-button-container {
+	width: 50%;
+	text-align: center;
+}
+
+.header-img{
+	max-width: 50%;
+}
+
+.header-button {
+	background: white;
+	font-family: 'Work Sans', sans-serif;
+	font-size: 1.2vw;
+	border: 1px solid black;
+	padding: 10px 50px;
+	-webkit-transition-duration: 1s;
+}
+
+button:hover {
+	background: rgb(185, 185, 185);
+}
+
+@keyframes button-shadow {
+    from  {box-shadow: 10px 10px 5px white;}
+	to  {box-shadow: 5px 5px 5px #00B3FE;}
+}
+
+h1 {
+	font-size: 60px;
+}
+
+h2 {
+	font-size: 30px;
+}
+
+ul {
+	list-style-type: square;
+	margin: 0;
+	padding: 0;
+	list-style-position: inside;
+	margin-top: 1.5vh;
+}
+
+li {
+	padding-bottom: 1.5vh;
+}
+
+.divider {
+	display: block;
+	width: 100%;
+	border-top: 1px solid black;
+	margin: 3vh auto;
+}
+
+.content {
+	display: flex;
+	justify-content: space-between;
+}
+
+.center {
+	text-align: center;
+}
+
+.wrap {
+	flex-wrap: wrap;
+}
+
+.two-column {
+	width: 50%;
+	align-items: center;
+}
+
+.flex {
+	display: flex;
+}
+
+.border-test {
+	border: 1px solid black;
+}
+
+.row {
+	display: flex;
+	width: 100%;
+}
+
+.bordered{
+	padding: 2vh;
+	border: 1px solid black;
+	background: #F4F3F4;
+}
+
+.left-padding {
+	padding-left: 1.5vh;
+}
+
+.right-padding {
+	padding-right: 1.5vh;
+}
+
+.top-padding {
+	padding-top: 3vh;
+}
+
+.bottom-padding {
+	padding-bottom: 3vh;
+}
+
+.left-margin {
+	margin-left: 1.5vh;
+}
+
+.right-margin {
+	margin-right: 1.5vh;
+}
+
+.top-margin {
+	margin-top: 3vh;
+}
+
+.bottom-margin {
+	margin-bottom: 3vh;
+}
+
+.middle-img{
+	width: 100%;
+}
+
+.learn-more {
+	font-family: 'Work Sans', sans-serif;
+	margin-top: 1.5vh;
+	background: white;
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 0.5vw 2.5vw;
+	-webkit-transition-duration: 1s;
+}
+
+.three-column-content {
+	width: 33%;
+}
+
+.contact {
+	display: flex;
+	flex-direction: column;
+}
+
+address{
+	margin-bottom: 1.5vh;
+}
+
+.block-address {
+	display:block;
+}
+
+.contact-img {
+	max-width: 100%;
+	-webkit-clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
+}
+
+input[type=text] {
+	margin-bottom: 1.5vh;
+}
+
+input[type=submit] {
+	font-family: 'Work Sans', sans-serif;
+	margin-top: 1.5vh;
+	background: white;
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 0.5vw 2.5vw;
+	-webkit-transition-duration: 1s;
+}
+
+.drop-shadow-filter {
+	filter: drop-shadow(10px 15px 5px black);
+}
+
+footer {
+	text-align: center;
+	padding: 3vh 0;
+}
+
